[package]
name = "ghostclip"
version = "0.1.0"
edition = "2021"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = {version="0.11.1",features = ["xfixes"]}
once_cell = "1.17.1"
clap = { version = "4.1.8", features = ["derive"] }
